feat: feature complete version
It would help if I had read the instruction correctly :facepalm:.

So, I was trying to make it so localhost displayed the react app.
But the ask was for localhost:8080 to display it. Which just so
happened to be one of the things I tried along the way. Once I
reread the ask I had the fix read in less than 5 minutes. Took
me another two or so hours to get here but it works.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,8 +6,6 @@ services:
       - ./bluestone-app:/usr/src/service
     working_dir: /usr/src/service
     command: bash -c "npm install && npm start"
-    ports:
-      - 3000:3000
   db:
     image: postgres
     restart: always
@@ -16,5 +14,8 @@ services:
   nginx:
     image: nginx:alpine
     restart: always
+  proxy:
+    build: ./nginx
     ports:
-      - 80:80
+      - 8080:8080
+    restart: always
