--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,16 +1,29 @@
-server {
-    listen       80;
-    server_name  localhost;
+worker_processes 1;
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-        proxy_pass http://localhost:3000;
+events { worker_connections 1024; }
+
+http {
+
+    sendfile on;
+
+    # upstream docker-nginx {
+    #     server nginx:80;
+    # }
+
+    upstream docker-app {
+        server app:3000;
     }
 
-    # redirect server error pages to the static page /50x.html
-    #
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
+    server {
+        listen       8080;
+
+        location / {
+            proxy_pass http://docker-app;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+    }
 }
